--- a/pom.xml
+++ b/pom.xml
@@ -34,38 +34,54 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-compiler</artifactId>
-            <version>${drools.version}</version>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-core</artifactId>
-            <version>${drools.version}</version>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-support</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.drools</groupId>-->
+            <!--<artifactId>drools-compiler</artifactId>-->
+            <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.drools</groupId>-->
+            <!--<artifactId>drools-core</artifactId>-->
+            <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>org.drools</groupId>-->
             <!--<artifactId>drools</artifactId>-->
             <!--<version>${drools.version}</version>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.kie</groupId>
-            <artifactId>kie-api</artifactId>
-            <version>${drools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kie</groupId>
-            <artifactId>kie-internal</artifactId>
-            <version>${drools.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.services.micro</groupId>
-            <artifactId>generic-search</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <classifier>client</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.kie</groupId>-->
+            <!--<artifactId>kie-api</artifactId>-->
+            <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.kie</groupId>-->
+            <!--<artifactId>kie-internal</artifactId>-->
+            <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.services.micro</groupId>-->
+            <!--<artifactId>generic-search</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+            <!--<classifier>client</classifier>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.solr</groupId>-->
+            <!--<artifactId>solr-solrj</artifactId>-->
+            <!--<version>7.0.0</version>-->
+        <!--</dependency>-->
 
 
         <dependency>
@@ -93,7 +109,27 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
+            <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.13.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <schemaLanguage>WSDL</schemaLanguage>
+                    <wsdl>true</wsdl>
+                    <xmlschema>false</xmlschema>
+                    <generatePackage>com.ftd.pi.ic.ftdpartners.webservices</generatePackage>
+                    <schemaIncludes>
+                        <include>apollo.wsdl</include>
+                    </schemaIncludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
