--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <packaging>jar</packaging>
 
     <name>search-rules</name>
-    <description>Search rules services built with drools </description>
+    <description>Search rules services built with drools</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.7.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -22,67 +22,172 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Dalston.SR3</spring-cloud.version>
+        <spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
         <drools.version>7.3.0.Final</drools.version>
+        <myMavenRepoReadUrl>https://mymavenrepo.com/repo/Ko7hlTF72DbglwWKg7h2/</myMavenRepoReadUrl>
+        <myMavenRepoWriteUrl>https://mymavenrepo.com/repo/Eyq6Bd6COULiONw5AvFa/</myMavenRepoWriteUrl>
         <!--<drools.version>6.5.0.Final</drools.version>-->
     </properties>
 
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>repository.spring.snapshot</id>
+            <name>Spring Snapshot Repository</name>
+            <url>http://repo.spring.io/snapshot</url>
+        </repository>
+
+        <repository>
+            <id>myMavenRepo</id>
+            <url>${myMavenRepoReadUrl}</url>
+        </repository>
+    </repositories>
+
+    <!--<distributionManagement>-->
+    <!--<repository>-->
+    <!--<id>myMavenRepo</id>-->
+    <!--<url>${myMavenRepoWriteUrl}</url>-->
+    <!--</repository>-->
+    <!--<snapshotRepository>-->
+    <!--<id>myMavenRepo</id>-->
+    <!--<url>${myMavenRepoWriteUrl}</url>-->
+    <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
+
     <dependencies>
 
-
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter</artifactId>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+        <!--<groupId>org.springframework.ws</groupId>-->
+        <!--<artifactId>spring-ws-core</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.ws</groupId>-->
+        <!--<artifactId>spring-ws-security</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.ws</groupId>-->
+        <!--<artifactId>spring-ws-support</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.ws</groupId>
-            <artifactId>spring-ws-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ws</groupId>
-            <artifactId>spring-ws-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ws</groupId>
-            <artifactId>spring-ws-support</artifactId>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.drools</groupId>-->
-            <!--<artifactId>drools-compiler</artifactId>-->
-            <!--<version>${drools.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.drools</groupId>-->
-            <!--<artifactId>drools-core</artifactId>-->
-            <!--<version>${drools.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.drools</groupId>-->
-            <!--<artifactId>drools</artifactId>-->
-            <!--<version>${drools.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.kie</groupId>-->
-            <!--<artifactId>kie-api</artifactId>-->
-            <!--<version>${drools.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.kie</groupId>-->
-            <!--<artifactId>kie-internal</artifactId>-->
-            <!--<version>${drools.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.services.micro</groupId>-->
-            <!--<artifactId>generic-search</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-            <!--<classifier>client</classifier>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.solr</groupId>-->
-            <!--<artifactId>solr-solrj</artifactId>-->
-            <!--<version>7.0.0</version>-->
-        <!--</dependency>-->
 
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp</artifactId>-->
+        <!--<version>1.0.0.M1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-starter-core</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-starter-sql</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-starter-pubsub</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-integration-gcp</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-storage</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-jdbc</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-starter-trace</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.google.api/gax -->
+        <!-- https://mvnrepository.com/artifact/com.google.api/gax -->
+        <dependency>
+            <groupId>com.google.api</groupId>
+            <artifactId>gax</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+
+
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-integration-gcp</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-gcp-starter-pubsub</artifactId>-->
+        <!--<version>1.0.0.BUILD-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.drools</groupId>-->
+        <!--<artifactId>drools-compiler</artifactId>-->
+        <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.drools</groupId>-->
+        <!--<artifactId>drools-core</artifactId>-->
+        <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.drools</groupId>-->
+        <!--<artifactId>drools</artifactId>-->
+        <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.kie</groupId>-->
+        <!--<artifactId>kie-api</artifactId>-->
+        <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.kie</groupId>-->
+        <!--<artifactId>kie-internal</artifactId>-->
+        <!--<version>${drools.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.services.micro</groupId>-->
+        <!--<artifactId>generic-search</artifactId>-->
+        <!--<version>1.0-SNAPSHOT</version>-->
+        <!--<classifier>client</classifier>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.solr</groupId>-->
+        <!--<artifactId>solr-solrj</artifactId>-->
+        <!--<version>7.0.0</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -92,15 +197,15 @@
     </dependencies>
 
     <!--<dependencyManagement>-->
-        <!--<dependencies>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-dependencies</artifactId>-->
-                <!--<version>${spring-cloud.version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
-        <!--</dependencies>-->
+    <!--<dependencies>-->
+    <!--<dependency>-->
+    <!--<groupId>org.springframework.cloud</groupId>-->
+    <!--<artifactId>spring-cloud-dependencies</artifactId>-->
+    <!--<version>${spring-cloud.version}</version>-->
+    <!--<type>pom</type>-->
+    <!--<scope>import</scope>-->
+    <!--</dependency>-->
+    <!--</dependencies>-->
     <!--</dependencyManagement>-->
 
     <build>
@@ -109,27 +214,25 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-                <artifactId>maven-jaxb2-plugin</artifactId>
-                <version>0.13.2</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <schemaLanguage>WSDL</schemaLanguage>
-                    <wsdl>true</wsdl>
-                    <xmlschema>false</xmlschema>
-                    <generatePackage>com.ftd.pi.ic.ftdpartners.webservices</generatePackage>
-                    <schemaIncludes>
-                        <include>apollo.wsdl</include>
-                    </schemaIncludes>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.jvnet.jaxb2.maven2</groupId>-->
+            <!--<artifactId>maven-jaxb2-plugin</artifactId>-->
+            <!--<version>0.13.2</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<goals>-->
+            <!--<goal>generate</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--<configuration>-->
+            <!--<schemaLanguage>WSDL</schemaLanguage>-->
+            <!--<generatePackage>com.ftd.pi.ic.ftdpartners.webservices</generatePackage>-->
+            <!--<schemaIncludes>-->
+            <!--<include>apollo.wsdl</include>-->
+            <!--</schemaIncludes>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
